--- a/endpoints.json.example
+++ b/endpoints.json.example
@@ -9,7 +9,9 @@
     "url": "",
     "token_url": "",
     "username": "",
-    "password": ""
+    "password": "",
+    "client_id": "",
+    "client_secret": ""
   },
   {
     "system_id": 2,
@@ -21,6 +23,8 @@
     "url": "",
     "token_url": "",
     "username": "",
-    "password": ""
+    "password": "",
+    "client_id": "",
+    "client_secret": ""
   }
 ]
