--- a/endpoints.json.example
+++ b/endpoints.json.example
@@ -7,6 +7,7 @@
     ],
     "supplier_name": "Secretaría de la Función Pública",
     "url": "",
+    "entities_url": "",
     "token_url": "",
     "username": "",
     "password": "",
@@ -21,6 +22,7 @@
     ],
     "supplier_name": "Sistema Estatal Anticorrupción del Estado de Fuebla",
     "url": "",
+    "entities_url": "",
     "token_url": "",
     "username": "",
     "password": "",
