--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.0",
     "morgan": "~1.9.0",
-    "request": "^2.88.0",
+    "qs": "^6.9.1",
+    "request": "^2.88.2",
     "request-promise": "^4.2.5"
   }
 }
