--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
 PORT=3101
 GQL_REQUEST_TIMEOUT=7000
+
+# POSTGRESQL
+PG_USER = app_user
+PG_HOST = example.com
+PG_DATABASE = app_db
+PG_PASSWORD = s3Cr3t
+PG_PORT = 5432
