--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,7 @@ PG_DATABASE = app_db
 PG_PASSWORD = s3Cr3t
 PG_PORT = 5432
 
+TIMEOUT_TOKEN=2000
+TIMEOUT_DATA=4000
+
 NODE_TLS_REJECT_UNAUTHORIZED = 0
