--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -13,6 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.0",
     "morgan": "~1.9.0",
+    "nodemon": "^2.0.22",
     "pg": "^8.0.3",
     "qs": "^6.9.1"
   }
